# advent-of-code-rust

./: .gitignore  Cargo.toml  NOTES.md  README.md  TODO.md  aoc_settings.example.json  aoc_settings.example.toml  aoc_settings.toml
.github/workflows/: ci.yml
.puzzles/y2024/1/: input.encrypted.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2024/10/: input.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2024/11/: input.encrypted.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2024/12/: input.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2024/13/: input.encrypted.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2024/14/: input.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2024/15/: input.txt  part-1-answers.txt
.puzzles/y2024/2/: input.encrypted.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2024/3/: input.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2024/4/: input.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2024/5/: input.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2024/6/: input.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2024/7/: input.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2024/8/: input.encrypted.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2024/9/: input.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2025/1/: input.encrypted.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2025/11/: input.encrypted.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2025/2/: input.encrypted.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2025/3/: input.encrypted.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2025/4/: input.encrypted.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2025/5/: input.encrypted.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2025/6/: input.encrypted.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2025/7/: input.encrypted.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2025/8/: input.encrypted.txt  part-1-answers.txt  part-2-answers.txt
.puzzles/y2025/9/: input.encrypted.txt  part-1-answers.txt
crates/advent-of-code-data/: Cargo.toml  README.md
crates/advent-of-code-data/src/: aoc_service.rs  cache.rs  client.rs  config.rs  data.rs  lib.rs  registry.rs  runner.rs  settings.rs
crates/advent-of-code-data/src/client/: protocol.rs
crates/noclip/: Cargo.toml  README.md
crates/noclip/src/: lib.rs  spatial.rs  utils.rs
crates/noclip/src/spatial/: direction.rs  grid.rs
crates/ube/: Cargo.toml  README.md
crates/ube/src/: counter.rs  graph.rs  intervals.rs  lib.rs  spatial.rs  union_find.rs  utils.rs
crates/ube/src/spatial/: direction.rs  grid.rs  point2.rs  point3.rs
crates/workshop/: Cargo.toml
crates/workshop/src/: utils.rs
crates/workshop/src/spatial/: direction.rs  grid.rs
crates/yuletide/: Cargo.toml  README.md
crates/yuletide/src/: lib.rs  registry.rs  runner.rs  terminal_output.rs
examples/: advent_of_code_data.rs
scripts/: new_solver.py
src/: cache.rs  client.rs  data.rs  lib.rs  main.rs  registry.rs  settings.rs  spatial.rs  terminal_output.rs  utils.rs
src/spatial/: direction.rs  grid.rs  point2.rs
src/y2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/y2025/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
tests/: test_cache_fs.rs  test_client.rs  test_grid.rs  test_settings.rs
