[package]
name = "advent-of-code-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
chrono-tz = "0.10.0"
linkme = "0.3.31"
reqwest = { version = "0.12.9", features = ["blocking", "cookies"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
