[package]
name = "advent-of-code-data"
version = "0.0.0"
authors = ["Scott MacDonald"]
description = "Advent of Code API for submitting answers and getting inputs"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
chrono.workspace = true
chrono-tz.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_crypt = "0.2.3"
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
