[package]
name = "ube"
version = "0.0.1"
authors = ["Scott MacDonald"]
description = "A collection of data structures, algorithms and utilities that can be used for an assortment of purposes"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
regex.workspace = true
