[package]
name = "workshop"
version = "0.0.0"
authors = ["Scott MacDonald"]
description = "A collection of utilities and other helpers for solving coding challenges"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
regex.workspace = true
